Update 1. 初めに (Introduction).md
敏先生の指摘により一部改良

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -1,3 +1,6 @@
+
+
+
 # 第1章 この文書の目的・対象読者
 > この章は、この文書の位置付け、それが必要な理由、なぜあなたが読む必要があるかを書く。
 
@@ -12,7 +15,7 @@
 
 現在用いられている日本語の組版規則は、金属活字の技術の上で、読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よってその規則は金属活字の技術や、紙という媒体の性質を色濃く反映している。
 
-これに対してデジタルテキストは印刷とは根本的に異なる技術基盤を持っている。最も重要な違いは個々のデジタルデバイスが自動組版装置でありかつ表示媒体であることだ。組版はそれを読む人の手元で環境を反映して行われる。デジタルテキストは生きたデータであり、検索や編集などの動的な側面を持っている。
+これに対してデジタルテキストは印刷とは根本的に異なる技術基盤を持っている。最も重要な違いは個々のデジタルデバイスが自動組版装置であり、かつ表示媒体であることだ。組版はそれを読む人の手元で環境を反映して行われる。デジタルテキストは生きたデータであり、検索や編集などの動的な側面を持っている。
 
 また、技術そのものではないが、技術を取り巻く環境にも変化がある。例えばウェブを含むソフトウェアの開発が国際的な舞台で行われていること、書き手の組版に対する役割が飛躍的に増えたこと、アクセシビリティの確保が重要になったことなどである。
 
@@ -20,7 +23,7 @@
 
 本文書はこのような背景のもと、従来の規則およびその記述方法に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。
 
-デジタルテキストにおいては一人一人のテキストの作り手が組版の大きな部分を担っている。文字、特に約物の選択、文節スタイルの選択、文字のサイズやフォントの選択などが、多くの場合書き手に委ねられている。よって、この文書では書き手のための章を加えた。また、デジタルテキストの組版においてはフォントの技術的内容が組版に大きな影響を与える。よって本文書ではフォントに関する要件も扱う。
+デジタルテキストにおいては一人一人のテキストの作り手が組版の大きな部分を担っている。文字、特に約物の選択、段落スタイルの選択、文字のサイズやフォントの選択などが、多くの場合、書き手に委ねられている。よって、この文書では書き手のための章を加えた。また、デジタルテキストの組版においてはフォントの技術的内容が組版に大きな影響を与える。よって本文書ではフォントに関する要件も扱う。
 
 執筆にあたっては、できるだけ理由や背景を説明し、より良い解決方法を考える一助となるようにした。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
@@ -31,7 +34,7 @@
 ## 2. 対象読者
 この文書の一番目の対象読者は、「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」と同様、テキストに関わるソフトウェアの設計・実装者である。ソフトウェア開発はグローバル化しているので、日本語の知識のほとんどないエンジニアでも理解できるよう必要な基礎からカバーし、また暗黙に前提とする知識に気を使いながら執筆した。また、判断の助けになるように重要度や、それが必要な背景などをできるだけ説明した。ただし、設計・実装は数々の判断や試行錯誤の連続であり、依然としてそこに深く日本語組版を理解するエンジニアの存在が必要であろう。
 
-二番目の読者は、日本語テキストの詳細な体裁、デザインを扱う人である。ウェブやデジタルデバイスのAPI、デザインツールなどは組版に対して大きな柔軟性を提供するので、目的に沿ったデザインを実現するには日本語組版に対する広範な知識が必要となる。（ただし、一般的な組版の性質や原則を述べるのであって、個別のデザインについては扱わない）
+二番目の読者は、日本語テキストの詳細な体裁、デザインを扱う人である。ウェブやデジタルデバイスのAPI、デザインツールなどは組版に対して大きな柔軟性を提供するので、目的に沿ったデザインを実現するには日本語組版に対する広範な知識が必要となる。ただし、一般的な組版の性質や原則を述べるのであって、個別のデザインについては扱わない。
 
 最後の読者は、日本語テキストを書く人である。ここには日本語話者として日常的に日本語を書く人（もうちょっと加える）。また、必ずしも日本語話者ではないが国際的な企業で Webサイトやソフトウェアの日本語へのローカリゼーションを行う人も対象読者として考慮した。デジタルテキストは、多くの場合専門家による校正を経ずに直接組版されるので、書き手自身が文字やフォントの正確な使い方を知っていることは重要である。よって本文書では組版の観点からのテキストの書き方をカバーしている。
 
@@ -82,7 +85,7 @@
 
 > 目の前のテキストの見かけが正しければ全て良し、というわけではない、をどこかに。大きな結論の一つ。
 
-## 4. 技術周辺の違い（社会的要因の変化？）
+## 4. 社会的要因の変化
 ### グローバリゼーション
 デジタルデバイスにおける組版は、国際化ソフトウェアのアーキテクチャ、例えば Unicode 環境や国際化された基本APIの上で実装されるので、その環境で実装のしやすいものである必要がある。また、国際化されたソフトウェアは複数の言語を同時に扱うことを想定しており、例えば他の言語の中に日本語が埋め込まれる場合やその反対の場合を想定する必要がある。そのため、基本的な文字や行の配置方法に整合性が取れている必要がある。別の言語、特に英語で採用されている組版方法が日本語にも流れ込んでくる。例えばイタリックはその例である。さらに、目的の同じ組版が言語ごとに異なる場合、既に実装されている組版方法を採用する方向に圧力が働く。例えば注の組版方法として脚注が既に実装されている場合、割注の優先順位は下がる。
 
@@ -107,11 +110,6 @@
 
 > ここは未整理でまだ箇条書き。
 
-### 技術的前提
-- JLReq においては組版の現在の姿を表すために実装とは独立の記述方法をとっている。実装と独立の記述が可能なのは技術が成熟しきっている証左である。技術の進歩が大きい場合、技術につれて可能なことが変化するので、技術独立の記述が不可能になる。デジタルネイティブな組版においては技術との整合性が重要なポイントの一つであるため、実装を考慮した記述となる。エンジニアが読んで実装に移れるような記述にすることが重要である。
-- 広く受け入れられている規格や実装との整合性をつける。特に文字の定義は Unicode に基づいたものにする。例えば UAX #44 Unicode Character Database 特に General Category、UAX #11 East Asian Width、UAX #50 Unicode Vertical Text Layout など。
-- 必要な組版機能に対して規格・実装に不足があれば、その不足を洗い出して指摘する。この部分は規格や実装の進みに合わせて頻繁なアップデートが必要であろう。例えば日本語組版に対する文字コードの不備は明確に指摘する。同様に、重要であるのにcssやメジャーな実装で欠けていることがあれば、意識して書く。
-
 ### 実装支援
 - 実装支援：シンプル化、プライオリティ付け、デフォルトの方法の提案などにより規格化コスト・実装コストを下げる。それにより、より早期に、より多くの、またよりベンダ間で統一の取れた実装が得られることを期待する。同時により洗練された方法も紹介する。
 - 複数の組版方法のある場合、可能な限りデフォルトの選択を示し、または選択のための基準を示す。例えば行長に対する最適な行間や禁則の選び方など。
@@ -122,7 +120,7 @@
 - 特に推奨値が英語や現在の一般的な値と異なる場合にはそれが明確にわかるように書く。例：行間
 - 日本語や日本語組版に必ずしも精通していない技術者の理解のため、基本から書く：フォントなど、JIS X 4051 や JLReq が詳しく扱っていないが、国際化環境の中に日本語組版を成り立たせるために必要な技術をカバーする。
 
-### 位置付け、書き方
+### 執筆の方針
 - 規範というよりガイドライン。「推奨」と「要件」は明確に分けて、わかるように書く
 - 理由を説明する。背景を示す：組版機能に対し、なぜそのような方法になっているのか、その理由を示すことでより良い理解を助ける。組版の方法や値が複数ある場合や、明確な答えがない場合には、その機能を考える際に重要な要素を示すことで独自の判断を助ける。結果のみではなく理由を示すことで、そこで示されている方法と異なった方法を試みることを可能にし、また議論と将来の進化を促すような内容にする。背景理解に役に立つ場合歴史的な経緯を示す。ただし歴史そのものが目的ではないので注意。
 
