Update 2. 日本語デジタルテキスト入門（Introduction to Japanese Digital Text）.md
2024-10-9の編集会議を反映

--- a/drafts/2. 日本語デジタルテキスト入門（Introduction to Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキスト入門（Introduction to Japanese Digital Text）.md
@@ -1,31 +1,36 @@
-# 2　日本語デジタルテキスト入門（Introduction to Japanese Digital Text）
+# 2　日本語デジタルテキスト入門（タイトル気に食わない）（Introduction to Japanese Digital Text）
 > 理論的基礎というよりは、普通の人にも読んで欲しいので「入門 / Introduction to」を使う。
 
 > この章で、日本語デジタルテキストの基礎、および組版・テキストレイアウトの観点での日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。
 
 前章で述べたように、デジタルテキストにおいては、書き手が組版の大きな部分を担っているので、書き手が意図通りのデジタルテキストを作る方法を知っていることが重要である。
 
-この章で説明するが、デジタルテキストで重要なことは、目の前のテキストの見かけが正しければ全て良し、というわけではない、ということだ。
+この章で説明するが、デジタルテキストで重要なことは、目の前のテキストの見かけが正しければ全て良し、というわけではない、ということだ。例えば、横書きで長音とダーシは形がよく似ていて、間違った方を使っても読めるが、意味が全く異なり、また組版上の処理も異なる。
 
-このために書き手が気をつけるべきことをこの章にまとめた。同時にこの章は以降の章のための基礎となる。
+このために書き手が気をつけるべきことをこの章にまとめた。同時に、この章は以降の章のための基礎となる。
 
 現代においては非日本語話者が日本語を取り扱う必要のあることも増えている。ゆえ、必要な日本語の基礎もカバーすることとする。
 
 > デバイスやスタイルが変わった時を意識して、困らない書き方をしてくださいね。余計なことしないでね。という内容を書けば良い。dos and don’ts を具体的に。
 
-> snsや書き込みなど vs 小説など。文のスタイルの違い。
-
-## 2.1 デジタルデバイス上の日本語書き言葉の基礎
+## 2.1 日本語書き言葉の特徴
 > 2.1はデジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。日本語にネイティブでない人が対象だが、日本人でも発見があるかもしれない。以降の章に役に立つことを主眼に。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
 
-現代の日本語は、表意文字である漢字と、表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字部分は内容語であり、ひらがな部分の多くは機能語として内容語を文法的につなげている。漢字は比較的複雑で四角く見え、ひらがなは比較的単純で曲線が多い。日本語には空白など語の区切りを示す文字はないが、この漢字とひらがなの濃度、形や大きさの差がリズムを作り、これにより非明示的に語句のまとまり（the grouping of phrases）を示している（例）。
+#### 多様な文字種の使用
+現代の日本語は、表意文字である漢字と、表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字部分は内容語であり、ひらがな部分の多くは機能語として内容語を文法的につなげている。漢字は比較的複雑で四角く見え、ひらがなは比較的単純で曲線が多い。日本語には空白など語の区切りを示す文字はないが、この漢字とひらがなの濃度、形や大きさの差がリズムを作り、これにより非明示的に語句のまとまり（the grouping of phrases）を示しており、明示的に語句を区切る文字がなくても語句のまとまりを認識できる。
 
-ここに各々独自の役目を持つカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字、多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
+（図）
 
-日本語では、ほとんどの漢字が複数の読みを持っている。さらに、複合語や固有名詞では、その読みが個々の漢字の読みから乖離していることがある。多くの場合、漢字の読みは文脈から判断できるが、専門用語などで読み方が広く知られていなかったり、特に固有名詞では、真に曖昧で書かれたものだけでは読みを特定できないことがある。
+上記の漢字やひらがな以外に、各々独自の役目を持つカタカナ、英字、数字、約物・記号が加わる。デジタルテキストにおいてはさらに絵文字、多様なスクリプトの文字なども使われる。
 
-このため、日本語では、漢字に対する読みを示して読むのを助けるためにルビを使用したり、名前や住所を記入するフォームでは漢字と読みの両方を入力するなどの方法が発展してきた。これらが示すように、日本語には、書き言葉とその読みが二重構造を作っている（部分がある：全体ではないとのコメントがあったが、二重構造があると言うために全体である必要はない。多言語には存在しないルビやふりがな欄の存在が十分な証左である）。
+（カタカナや英字、数字、約物も含まれた日本語の例）
 
+#### 読み仮名の必要性
+日本語では、ほとんどの漢字が複数の読みを持っている。さらに、読みが個々の漢字の通常の読みとは異なる例や、同じ表記に対して複数の読み方がある例もあり、漢字と読みの対応は曖昧である。
+
+このため、日本語では、漢字に対する読みを示して読むのを助けるためにルビを使用したり、名前や住所を記入するフォームでは漢字と読みの両方を入力するなどの方法が発展してきた。これらが示すように、日本語には、書き言葉とその読みが二重構造を作っている。
+
+#### 縦書きと横書き
 歴史的に日本語は文字を縦方向に並べて書いたが、西洋の数字や単語の影響で横書きもなされるようになった。デジタルデバイスにおいては横書きが主流である。
 
 ## 2.2 日本語デジタルテキストに使用する文字
@@ -33,29 +38,33 @@
 
 > フォントについては後の章で説明するが、必要があればここでも触れる。たとえば全角。
 
+日本語デジタルテキストで使用する主な文字種について説明する。
+
 ### 和字
-ひらがな、カタカナ、漢字は伝統的に日本語に使われてきた文字であり、これらをまとめて「和字」と呼ぶ。デジタルデバイス上の多くのフォントで和字は全角幅と呼ばれる固定の幅を持つ。全角幅については後に詳しく説明する。全角幅を持つ文字を全角文字と呼ぶ。
+ひらがな、カタカナ、漢字は伝統的に日本語に使われてきた文字であり、これらをまとめて「和字」と呼ぶ。デジタルデバイス上の多くのフォントで和字は全幅と呼ばれる固定の幅を持つ。全幅については後に詳しく説明する。
 
 ### ひらがなとカタカナ
-ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本語独自の表音文字である。ひらがなとカタカナは一対一に対応しており、同じ音にひらがなとカタカナが一つづつある。現代日本語では、基本となる46文字、これに発音を変えるダイアクリティカルマークである濁点と半濁点、同じく発音を変える小書と呼ばれる基本の文字を小さくした文字が組み合わさる。
+ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本語独自の表音文字である。ひらがなとカタカナは一対一に対応しており、同じ音にひらがなとカタカナが一つずつある。現代日本語では、基本となる46文字、これに発音を変えるダイアクリティカルマークである濁点と半濁点、同じく発音を変える小書きと呼ばれる基本の文字を小さくした文字が組み合わさる。
+
+（50音図）
 
 ひらがな、カタカナの両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための付記のために漢字の形の一部を利用して生まれた。
 
 先に触れたように現代日本語においてひらがなは機能語として主に漢字で書かれる内容語を繋げ、または活用語の活用語尾となる。この役目のために、日本語はしばしば漢字とひらがなの繰り返しのリズムを作る。ひらがなはまた、内容語を示したり、読みの難しい漢字の読みを示すのに用いられる。
 
-カタカナは、音の表現に使われる。すなわち外国語の単語を音で表し（transcribe）、またオノマトペ（Onomatopoeia）に使われる。
+カタカナは、音の表現に使われる。すなわち外来語の単語を音で表し（transcribe）、動植物名、またオノマトペ（Onomatopoeia）などに使われることがある。
 
-読みにくくはあるが日本語を全てひらがな、もしくは全てカタカナ、で表すことができる。言語を学び始めたばかりの子どもの教科書はすべてひらがなである。子供達はまずひらがな、カタカナ、そして簡単な漢字の順に文字を学び始める。
+読みにくくはあるが日本語を全てひらがな、もしくは全てカタカナで表すことができる。言語を学び始めたばかりの子どもの教科書はすべてひらがなである（その場合は分書にする、と言うのを入れるかどうか後で考える）。子供達はまずひらがな、カタカナ、そして簡単な漢字の順に文字を学び始める。
 
 #### side note: 変体仮名
 仮名は漢字の続け字の形から生まれて音だけが残ったものであり、一つの発音に対応する仮名文字が複数あった。明治33年（1900）に一つの発音に一つの文字に統一されたが（これ知らない人多い）、統一以前の仮名は現代でも使用例がある。古都京都の街を歩くと店舗の名前などで出会うことができるだろう。xxxx年にUnicodeにも加わった。
 
 #### side note: 非標準的な濁音つき仮名
-ベースの仮名に濁音を組み合わせた文字は20文字あるが、これらの伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）を置く。
+ベースの仮名に濁音を組み合わせた文字は20文字あるが、これらの伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）を置く。2024年時点で、標準的なフォントにはこれらの非標準的な濁音付き仮名は含まれないが、合成文字の自動合成により、多くの環境で期待通りに表示される。ただし、これは環境によるので注意が必要である。漫画用フォントなどでは最適化された合成済みグリフを持っている。
 
-2024年時点で、標準的なフォントにはこれらの非標準的な濁音付き仮名は含まれないが、合成文字の自動合成により、多くの環境で期待通りに表示される。ただし、これは環境によるので注意が必要である。漫画用フォントなどでは最適化された合成済みグリフを持っている。
+（次の編集会議ここから）
 
-###  漢字
+### 漢字
 漢字は中国で生まれた表意文字であり、それぞれの文字が一つもしくは複数の概念を表す。非常に多くの文字が存在する。漢字一つ一つが英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると、その多さを理解しやすいだろう。日本語において漢字は主に内容語（content words）を作る。
 
 また、既に述べたように多くの漢字や複合語には複数の読みがあり、これが日本語における表記と読みの二重構造を作っている。
